--- a/requirements.txt
+++ b/requirements.txt
@@ -1,253 +1,6 @@
-﻿absl-py==2.0.0
-accelerate==0.26.1
-aiofiles==0.8.0
-aiohttp==3.9.3
-aiohttp-retry==2.8.3
-aiosignal==1.3.1
-aiosqlite==0.19.0
-annotated-types==0.6.0
-anyio==3.7.1
-argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
-astor==0.8.1
-asttokens==2.2.1
-astunparse==1.6.3
-async-lru==2.0.4
-attrs==23.1.0
-Babel==2.14.0
-backcall==0.2.0
-beautifulsoup4==4.12.2
-bleach==6.1.0
-blinker==1.6.2
-blis==0.7.11
-boto3==1.34.35
-botocore==1.34.35
-bs4==0.0.1
-cachetools==5.3.1
-catalogue==2.0.10
-certifi==2023.7.22
-cffi==1.16.0
-charset-normalizer==3.2.0
-click==8.1.7
-cloudpathlib==0.16.0
-cmake==3.27.7
-colorama==0.4.6
-coloredlogs==15.0.1
-comm==0.1.4
-comtypes==1.2.0
-confection==0.1.4
-contourpy==1.1.0
-customtkinter==5.2.0
-cycler==0.11.0
-cymem==2.0.8
-darkdetect==0.8.0
-datasets==2.16.1
-debugpy==1.6.7.post1
-decorator==4.4.2
-defusedxml==0.7.1
-dill==0.3.7
-dlib 
-dnspython==2.4.2
-executing==1.2.0
-fastjsonschema==2.18.1
-ffmpeg==1.4
-ffmpeg-python==0.2.0
-filelock==3.13.1
-Flask==2.3.3
-Flask-Cors==4.0.0
-flatbuffers==23.5.26
-fonttools==4.42.1
-from-root==1.0.2
-frozenlist==1.4.1
-fsspec==2023.10.0
-future==1.0.0
-gast==0.4.0
-gensim==4.3.2
-google-auth==2.23.0
-google-auth-oauthlib==1.0.0
-google-pasta==0.2.0
-grpcio==1.58.0
-guidata==3.1.1
-h11==0.14.0
-h5py==3.9.0
-huggingface-hub==0.20.3
-humanfriendly==10.0
-idna==3.4
-imageio==2.34.0
-imageio-ffmpeg==0.4.9
-ipykernel==6.25.1
-ipython==8.14.0
-ipywidgets==8.1.2
-itsdangerous==2.1.2
-jedi==0.19.0
-Jinja2==3.1.2
-jmespath==1.0.1
-joblib==1.3.2
-json5==0.9.14
-jsonschema==4.19.2
-jsonschema-specifications==2023.7.1
-jupyter-lsp==2.2.2
-jupyter-server==1.24.0
-jupyter-ydoc==0.2.4
-jupyter_client==8.3.0
-jupyter_core==5.3.1
-jupyter_server_ydoc==0.1.14
-jupyterlab==4.0.0a30
-jupyterlab_pygments==0.3.0
-jupyterlab_server==2.25.2
-jupyterlab_widgets==3.0.10
-keras==2.15.0
-Keras-Preprocessing==1.1.2
-keras-tuner==1.4.6
-kiwisolver==1.4.5
-kt-legacy==1.0.5
-langcodes==3.3.0
-libclang==16.0.6
-lxml==5.1.0
-Markdown==3.4.4
-MarkupSafe==2.1.3
-matplotlib==3.7.2
-matplotlib-inline==0.1.6
-mistune==3.0.2
-ml-dtypes==0.2.0
-moviepy==1.0.3
-mpmath==1.3.0
-multidict==6.0.5
-multiprocess==0.70.15
-murmurhash==1.0.10
-mypy-boto3-s3==1.34.14
-mysql==0.0.3
-mysqlclient==2.2.1
-nbclient==0.9.0
-nbconvert==7.15.0
-nbformat==5.9.2
-nest-asyncio==1.5.7
-networkx==3.2.1
-nltk==3.8.1
-notebook==7.0.0a7
-notebook-shim==0.1.0
-numpy==1.24.3
-oauthlib==3.2.2
-onnxruntime==1.16.0
-opencv-python==4.8.0.76
-opt-einsum==3.3.0
-outcome==1.3.0.post0
-packaging==23.1
-pandas==2.0.3
-pandocfilters==1.5.1
-parso==0.8.3
-pickleshare==0.7.5
-Pillow==10.0.0
-platformdirs==3.10.0
-plotly==5.18.0
-PlotPy==2.0.0
-portalocker==2.8.2
-preshed==3.0.9
-proglog==0.1.10
-prometheus-client==0.19.0
-prompt-toolkit==3.0.39
-protobuf==4.23.4
-psutil==5.9.5
-pure-eval==0.2.2
-pyarrow==15.0.0
-pyarrow-hotfix==0.6
-pyasn1==0.5.0
-pyasn1-modules==0.3.0
-pycparser==2.21
-pydantic==2.6.3
-pydantic_core==2.16.3
-Pygments==2.16.1
-PyJWT==2.8.0
-pymongo==4.5.0
-pyparsing==3.0.9
-pypiwin32==223
-pypng==0.20220715.0
-pyreadline3==3.4.1
-PySocks==1.7.1
-python-dateutil==2.8.2
-PythonQwt==0.11.1
-pyttsx3==2.90
-pytz==2023.3
-pywin32==306
-pywinpty==2.0.12
-PyYAML==6.0.1
-pyzmq==25.1.1
-qrcode==7.4.2
-QtPy==2.4.1
-referencing==0.30.2
-regex==2023.8.8
-requests==2.31.0
-requests-oauthlib==1.3.1
-rpds-py==0.12.0
-rsa==4.9
-s3transfer==0.10.0
-sacrebleu==2.4.0
-safetensors==0.4.2
-scikit-learn==1.3.1
-scipy==1.11.3
-seaborn==0.13.0
-selenium==4.17.2
-Send2Trash==1.8.2
-sentencepiece==0.1.99
-six==1.16.0
-sklearn==0.0.post10
-smart-open==6.4.0
-sniffio==1.3.0
-sortedcontainers==2.4.0
-soupsieve==2.5
-spacy==3.7.4
-spacy-legacy==3.0.12
-spacy-loggers==1.0.5
-SpeechRecognition==3.10.1
-srsly==2.4.8
-stack-data==0.6.2
-sympy==1.12
-tabulate==0.9.0
-tenacity==8.2.3
-tensorboard==2.15.1
-tensorboard-data-server==0.7.1
-tensorflow==2.13.0
-tensorflow-cpu==2.15.0
-tensorflow-docs 
-tensorflow-estimator==2.15.0
-tensorflow-intel==2.15.0
-tensorflow-io-gcs-filesystem==0.31.0
-termcolor==2.3.0
-terminado==0.18.0
-thinc==8.2.3
-thop==0.1.1.post2209072238
-threadpoolctl==3.2.0
-tifffile==2023.9.26
-tinycss2==1.2.1
-tk==0.1.0
-tkinterdnd2==0.3.0
-tokenizers==0.15.1
-tomli==2.0.1
-torch==2.2.0
-torchvision==0.17.0
-tornado==6.3.3
-tqdm==4.66.2
-traitlets==5.9.0
-transformers==4.37.2
-trio==0.24.0
-trio-websocket==0.11.1
-twilio==9.0.4
-typer==0.9.0
-typing_extensions==4.9.0
-tzdata==2023.3
-urllib3==1.26.16
-vaderSentiment==3.3.2
-wasabi==1.1.2
-wcwidth==0.2.6
-weasel==0.3.4
-webencodings==0.5.1
-websocket-client==1.7.0
-Werkzeug==2.3.7
-widgetsnbextension==4.0.10
-wordcloud==1.9.3
-wrapt==1.14.1
-wsproto==1.2.0
-xxhash==3.4.1
-y-py==0.5.9
-yarl==1.9.4
-ypy-websocket==0.3.2
+Flask==2.0.2
+numpy==1.21.0
+flask-cors==3.0.10
+requests==2.26.0
+beautifulsoup4==4.10.0
+joblib==1.1.0
